--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-file-include": "^2.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-webp": "^4.0.1",
-    "gulp-webp-html": "^1.0.2"
+    "gulp-webp-html": "^1.0.2",
+    "pug": "^3.0.0"
   },
   "dependencies": {
     "browsersync": "0.0.1-security",
